SPSC RingBuffer with cache-line padding
Disruptor-style single-producer / single-consumer ring. Producer and
consumer sequences live on dedicated cache lines with manual padding
(rather than @Contended — see ADR-009 for portability rationale), and
each side caches the opposite sequence so steady-state enqueue / dequeue
never crosses a line. VarHandle release / acquire ordering, power-of-two
capacity, mask-based indexing.